// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectStateReducedMotion should return the correct state 1`] = `
Object {
  "meta": Object {
    "isInitial": false,
  },
  "payload": Object {
    "selected": "no-preference",
  },
}
`;

exports[`selectStateReducedMotion should return the initial state if no state is found 1`] = `
Object {
  "meta": Object {
    "isInitial": true,
  },
  "payload": Object {
    "selected": undefined,
  },
}
`;

exports[`selectStateReducedMotion should return the initial state if resource key is not found 1`] = `
Object {
  "meta": Object {
    "isInitial": true,
  },
  "payload": Object {
    "selected": undefined,
  },
}
`;

exports[`selectStateReducedMotionSelectedReduce should return the correct state 1`] = `false`;

exports[`selectStateReducedMotionSelectedReduce should return the default if state isn't found 1`] = `false`;
